# minimal

./: BUILD.bazel  MODULE.bazel  README.md
.github/workflows/: ci.yaml
tools/: BUILD.bazel
